# haskell-html-server

./: .gitignore  README.md  flake.nix  haskell-html-server.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Main.hs
test-static/: index.html
