cabal-version:      3.0
name:               minecraft-api
version:            0.0.0.1
license:            MIT
author:             Anthony Keba
maintainer:         anthony@keba.dev

executable haskell-html-server 
    main-is:          Main.hs
    build-depends:    base >=4.18 && <5
                    , servant
                    , servant-server
                    , warp
                    , aeson
                    , text
                    , blaze-html
    hs-source-dirs:   src
    default-language: Haskell2010
