cabal-version:      3.0
name:              haskell-html-server 
version:            0.0.0.1
license:            MIT
author:             Anthony Keba
maintainer:         anthony@keba.dev

executable haskell-html-server 
    main-is:          Main.hs
    build-depends:    base >=4.18 && <5
                    , servant
                    , servant-server
                    , servant-blaze
                    , warp
                    , aeson
                    , text
                    , blaze-html
                    , bytestring
                    , wai-app-static
    hs-source-dirs:   src
    default-language: Haskell2010
